--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Gravitas+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Slabo+13px&family=Slabo+27px&display=swap');
+@import "grid.css";
+@import "footer.css";
+@import "navbar.css";
+
 
 * {
     box-sizing: border-box;
@@ -10,60 +14,10 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     min-height: 100vh;
-    padding: 20px;
+
 }
 
 .grid-container>* {
-    box-shadow: 10px 6px 37px -13px rgba(51, 51, 51, 0.74);
-    border-radius: 10px;
+    box-shadow: 10px 6px 37px -13px rgba(51, 51, 51, 0.50);
     padding: 10px;
-    text-align: center;
-    font-weight: 500;
-}
-
-.grid-container {
-    display: grid;
-    gap: 20px;
-    grid-template:
-        "header"
-        "navbar" 50px
-        "sidebar" 100px
-        "main" 100%
-        "footer" 50px;
-
-    .header {
-        grid-area: header;
-        background-color: #2936aa;
-    }
-
-    .navbar {
-        grid-area: navbar;
-        background-color: #c4c4c4;
-    }
-
-    .sidebar {
-        grid-area: sidebar;
-        background-color: #9fd565;
-    }
-
-    .main {
-        grid-area: main;
-        background-color: #fafac6;
-    }
-
-    .footer {
-        grid-area: footer;
-        background-color: #464646;
-    }
-
-    @media (min-width: 768px) {
-        grid-template:
-            "header header" 150px
-            "navbar navbar" 50px 
-            "sidebar main" auto
-            "footer footer" 50px/
-            200px auto
-        ;
-    }
-
 }
