--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,7 @@
 .navbar{
-    margin: 10px 0;
+    margin-bottom: 10px;
+    background-color: #6b6b6b;
+    display: flex;
+    justify-content:space-around
 }
+
