--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Gravitas+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Slabo+13px&family=Slabo+27px&display=swap');
+
 @import "grid.css";
 @import "footer.css";
 @import "navbar.css";
+@import "header.css";
+
 
 
 * {
@@ -14,10 +17,15 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     min-height: 100vh;
-
+    background-color: rgb(39, 39, 39);
 }
 
 .grid-container>* {
     box-shadow: 10px 6px 37px -13px rgba(51, 51, 51, 0.50);
     padding: 10px;
+}
+
+.header h1{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
 }
