--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 @import "footer.css";
 @import "navbar.css";
 @import "header.css";
+@import "sidebar.css";
+@import "main.css";
 
 
 
@@ -17,12 +19,11 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     min-height: 100vh;
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(214, 214, 214);
 }
 
-.grid-container>* {
+.grid-container > * {
     box-shadow: 10px 6px 37px -13px rgba(51, 51, 51, 0.50);
-    padding: 10px;
 }
 
 .header h1{
